BUG: v4skin | kajona-overrides-pe.less -> fixed the z-index of the pe toolbar

--- a/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides-pe.less
+++ b/module_v4skin/admin/skins/kajona_v4/less/kajona-overrides-pe.less
@@ -26,7 +26,7 @@
 .peGlobalToolbar {
 
 
-    z-index: 1000;
+    z-index: 4001;
     font-family: @peFontFamily;
     color: #fff !important;
     font-size: 12px;
